# 2D_env_demo

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: algo_control.py  basic.py  traj_control.py
src/mr_sim/: __init__.py
src/mr_sim/agents/: base_agent.py  obs.py  robot.py
src/mr_sim/core/: engine.py  env.py  obstacle.py  world.py
src/mr_sim/planners/: __init__.py  base_controller.py  kb_controller.py  maze_controller.py  traj_controller.py
src/mr_sim/sensors/: __init__.py  base_sensor.py  lidar.py
src/mr_sim/utils/: __init__.py  draw.py  traj.py
tests/: anime.py  iter.py  traj_test.py
