[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_sim"
version = "0.1.0"
description = "Multi-robot simulation environment"
dependencies = [
    "numpy",
    "matplotlib",
    "pygame",
    "shapely"
]

[tool.setuptools.packages.find]
where = ["src"]